switch to maven wrapper in verify action

--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -16,4 +16,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Verify with Maven
-        run: mvn --batch-mode --update-snapshots package # verify needs gpg key
+        run: ./mvnw --batch-mode --update-snapshots package # verify needs gpg key
