--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+permissions:
+      contents: write
+      
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -14,6 +17,4 @@ jobs:
         uses: MathieuSoysal/Javadoc-publisher.yml@v2.5.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          javadoc-branch: javadoc
           java-version: 21
-          target-folder: javadoc 
